--- a/config.toml
+++ b/config.toml
@@ -2,9 +2,10 @@ baseURL = "https://mood.harrycresswell.com/"
 languageCode = "en-us"
 title = "Mood"
 
+
 [permalinks]
   post = "/:section/:slug/"
-  page = "/:title/"
+  page = "/:slug/"
 
 [params]
     keywords = "Bio Grow, hemp products, wholesale hemp, growers, hemp plants, agriculture, horticulture, CBD Oil, low THC, "
